lab3 file added

--- a/labs/lab2.html
+++ b/labs/lab2.html
@@ -4,7 +4,7 @@
         <title>Lab2: LastName, First Name</title>
     </head>
     <body>
-    <h1>Lab2: LastName, First Name</h1>
+    <h1>Lab2: Dao, Tran</h1>
     <p>Hello, World</p>
     </body>
 </html>
