--- a/projects/1/menu.html
+++ b/projects/1/menu.html
@@ -32,8 +32,8 @@
 
 <body>
 
-    <div class="brand">Business Casual</div>
-    <div class="address-bar">3481 Melrose Place | Beverly Hills, CA 90210 | 123.456.7890</div>
+    <div class="brand">Cafe Brulee</div>
+    <div class="address-bar">8452 Springfield Ave | Chicago, IL 60612 | 734.382.5620</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
