--- a/activities/jquery_basics.html
+++ b/activities/jquery_basics.html
@@ -1,8 +1,9 @@
 <html>
     <head>
         <title>Hello</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script>
+        /* global $ */
         $(function() {  //document ready event
             $("#p1").on("mouseenter" , function(){
                 $("#p1").css("color", "blue");
