--- a/projects/1/menu.html
+++ b/projects/1/menu.html
@@ -47,7 +47,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand" href="index.html">Business Casual</a>
+                <a class="navbar-brand" href="index.html">Cafe Brulee</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -59,7 +59,7 @@
                         <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="menu.html">Menu</a></a>
+                        <a href="menu.html">Blog</a></a>
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
@@ -77,38 +77,42 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Company
-                        <strong>blog</strong>
+                    <h2 class="intro-text text-center">
+                        <strong>Blog</strong>
                     </h2>
                     <hr>
                 </div>
                 <div class="col-lg-12 text-center">
-                    <img class="img-responsive img-border img-full" src="img/slide-1.jpg" alt="">
-                    <h2>Post Title
+                    <img class="img-responsive img-border img-full" src="http://favim.com/orig/201107/21/addict-coffee-heart-latte-Favim.com-111518.jpg" alt="">
+                    <h2>Partnership
                         <br>
                         <small>October 13, 2013</small>
                     </h2>
-                    <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                    <p>A singular kind of cool permeated the coffee shop—part of it performance, part of it atmosphere, and part of it design. Nishiya visited some hundred places around Italy for research. He wanted a place that would last, and said he wasn’t interested in the makeshift, the slapdash, or the vintage. He had a very particular image in mind: of durable quality and the air of traditional Europe.
+
+Nishiya Coffeehouse opened in September 2013. The first year was slow. At that time, there wasn’t any clear signage out front; passersby thought it was a bar and simply kept passing on by. With time the menu was revised, and locals started coming. The pudding and the banana espresso shake gained a reputation. Business picked up, a crew of regulars developed, and, Nishiya says, they’ve been busy ever since.</p>
                     <a href="#" class="btn btn-default btn-lg">Read More</a>
                     <hr>
                 </div>
                 <div class="col-lg-12 text-center">
-                    <img class="img-responsive img-border img-full" src="img/slide-2.jpg" alt="">
-                    <h2>Post Title
+                    <img class="img-responsive img-border img-full" src="https://s-media-cache-ak0.pinimg.com/originals/60/8c/5c/608c5c8e047a7d262c30545ed22f5582.jpg" alt="">
+                    <h2>Pom Pom turns 6
                         <br>
-                        <small>October 13, 2013</small>
+                        <small>April 1st, 2013</small>
                     </h2>
-                    <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                    <p>Guess who turned 6 today!</p>
                     <a href="#" class="btn btn-default btn-lg">Read More</a>
                     <hr>
                 </div>
                 <div class="col-lg-12 text-center">
-                    <img class="img-responsive img-border img-full" src="img/slide-3.jpg" alt="">
-                    <h2>Post Title
+                    <img class="img-responsive img-border img-full" src="https://media-cdn.tripadvisor.com/media/photo-s/03/9b/2d/f2/new-york-city.jpg" alt="">
+                    <h2>New York Expansion
                         <br>
-                        <small>October 13, 2013</small>
+                        <small>December 11th, 2012</small>
                     </h2>
-                    <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                    <p>aratoga Springs, New York, known for its horse racing culture, music venues, and popular bar scene, has finally become home to a specialty coffee shop. Kru Coffee, a surprising oasis in a strip mall off of New York State Route 50, opened in August 2016.
+
+The venture is the product of owners Kristi Brock and Ryan Miller, the latter of whom was trained by David Schomer of Espresso Vivace in Seattle before bringing back his experience to the East Coast. Miller’s success as the owner of Caffé Vero in Lake George led to his opening Spektor Coffee Roasters in Glens Falls, New York. With Brock, Miller saw great potential for specialty coffee in Saratoga Springs, and the rest, as they say, is history.</p>
                     <a href="#" class="btn btn-default btn-lg">Read More</a>
                     <hr>
                 </div>
