--- a/labs/lab5.html
+++ b/labs/lab5.html
@@ -4,6 +4,6 @@
         <title> </title>
     </head>
     <body>
-
+        <a href="https://friendlychat-c7802.firebaseapp.com">Chat App</a></a>
     </body>
 </html>
