--- a/labs.html
+++ b/labs.html
@@ -67,38 +67,48 @@
                     <div class="mdl-grid portfolio-copy">
                         <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Lab 2</h3>
                         <div class="mdl-cell mdl-cell--6-col mdl-card__supporting-text no-padding">
-                            <p>Lab 2<a href="../../labs/lab2.html">Here</a></p>
+                            <p>Our second lab was to get the students started with c9 and the beginning of HTML coding.
+                            We also learned how to use Github as our source control and how to update it using the Cloud9
+                            IDE --> <a href="../../labs/lab2.html">Here</a></p>
                         </div>
                         <div class="mdl-cell mdl-cell--6-col">
-                            <img class="article-image" src=" images/portfolio-example-02.jpg" border="0" alt="">
+                            <img class="article-image" src=" images/Lab2.png" border="0" alt="">
                         </div>
                         <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Lab 3</h3>
                         <div class="mdl-cell mdl-cell--6-col">
-                            <img class="article-image" src=" images/portfolio-example-03.jpg" border="0" alt="">
+                            <img class="article-image" src=" images/Lab3.png" border="0" alt="">
                         </div>
                         <div class="mdl-cell mdl-cell--6-col mdl-card__supporting-text no-padding ">
-                            <p>Project 2<a href="../../labs/lab3.html">Here</a></p></p>
+                            <p>Our third lab was working with a bootstrap template and getting used to the 
+                            layout of the column elements. We had to adjust the columns to fit the Bootstrap grid
+                            model --></p><a href="../../labs/lab3.html">Here</a></p></p>
                         </div>
                         <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Lab 4</h3>
                         <div class="mdl-cell mdl-cell--6-col mdl-card__supporting-text no-padding">
-                            <p>Project 1<a href="../../labs/lab4.html">Here</a></p>
+                            <p>Our fourth lab was working with canvases and manipulating them. We had to create
+                            a simple canvas and add event listeners to them for drawing (U) and erasing(X). Along with that
+                            we worked with animation of a circle inside the canvas and having it collide with the 
+                            edges of the canvas --><a href="../../labs/lab4.html">Here</a></p>
                         </div>
                         <div class="mdl-cell mdl-cell--6-col">
-                            <img class="article-image" src=" images/portfolio-example-02.jpg" border="0" alt="">
+                            <img class="article-image" src=" images/Lab4.png" border="0" alt="">
                         </div>
                         <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Lab 5</h3>
                         <div class="mdl-cell mdl-cell--6-col">
-                            <img class="article-image" src=" images/portfolio-example-03.jpg" border="0" alt="">
+                            <img class="article-image" src=" images/Lab5.png" border="0" alt="">
                         </div>
                         <div class="mdl-cell mdl-cell--6-col mdl-card__supporting-text no-padding ">
-                            <p>Project 2<a href="../../labs/lab5.html">Here</a></p>
+                            <p>Our fifth lab was to work with google firebase. We had to create a chat app as well
+                            as handling google login --><a href="../../labs/lab5.html">Here</a></p>
                         </div>
                         <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Lab 7</h3>
                         <div class="mdl-cell mdl-cell--6-col mdl-card__supporting-text no-padding">
-                            <p>Project 1<a href="../../labs/lab7.html">Here</a></p>
+                            <p>Our lab 7 has no interface, but instead focuses on what is displayed in the console.
+                            We had to work with databases, storing and retrieving the information to and from these
+                            databases --><a href="../../labs/lab7.html">Here</a></p>
                         </div>
                         <div class="mdl-cell mdl-cell--6-col">
-                            <img class="article-image" src=" images/portfolio-example-02.jpg" border="0" alt="">
+                            <img class="article-image" src=" images/Lab7.png" border="0" alt="">
                         </div>
                     </div>
                 </div>
