--- a/other.html
+++ b/other.html
@@ -68,8 +68,9 @@
                         <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Introduction</h3>
                         <div class="mdl-cell mdl-cell--6-col mdl-card__supporting-text no-padding">
                             <p>
-                                Hello!
+                                Hello! I've worked on some other projects and here are some links to them!
                             </p>
+                            <p><a href="https://sites.google.com/view/422project2/home">CS 422 Mirror</a></p>
                         </div>
                         <div class="mdl-cell mdl-cell--6-col">
                             <img class="article-image" src=" images/portfolio-example-02.jpg" border="0" alt="">
