--- a/projects/project5.html
+++ b/projects/project5.html
@@ -6,6 +6,8 @@
     <script src="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-pink.min.css">
+    <link rel=manifest href=manifest.json>
+    <title>My Day</title>
 </head>
 <body>
 <!-- Simple header with fixed tabs. -->
@@ -24,7 +26,11 @@
     </div>
   </header>
   <div class="mdl-layout__drawer">
-    <span class="mdl-layout-title"></span>
+    <span class="mdl-layout-title">About Me</span>
+    <p>Hello! My name is Tran Dao and I am the developer for this app. A little about me,
+    I am currently a 4th year Computer Science student studying at the University of Illinois
+    Chicago. I aspire to be a video game developer after a graduate or become an app
+    developer which I am coming to enjoy a lot more than I imagined.</p>
   </div>
   <main class="mdl-layout__content">
     <section class="mdl-layout__tab-panel is-active" id="fixed-tab-1">
@@ -46,13 +52,13 @@
             </tr>
             <tr>
               <td class="mdl-data-table__cell--non-numeric">Get a car wash</td>
-              <td>Today</td>
-              <td>9:00 PM</td>
+              <td></td>
+              <td></td>
             </tr>
             <tr>
               <td class="mdl-data-table__cell--non-numeric">Do homework</td>
               <td>Today</td>
-              <td>11:59 PM</td>
+              <td></td>
             </tr>
           </tbody>
         </table>
@@ -60,6 +66,7 @@
     </section>
     <section class="mdl-layout__tab-panel" id="fixed-tab-2">
       <div class="page-content">
+        
         <!-- Event card -->
         <style>
         .demo-card-event.mdl-card {
@@ -101,9 +108,6 @@
             </h4>
           </div>
           <div class="mdl-card__actions mdl-card--border">
-            <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
-              Dismiss
-            </a>
             <div class="mdl-layout-spacer"></div>
                 <i class="material-icons">event</i>
             </div>
@@ -118,9 +122,6 @@
             </h4>
           </div>
           <div class="mdl-card__actions mdl-card--border">
-            <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
-              Dismiss
-            </a>
             <div class="mdl-layout-spacer"></div>
                 <i class="material-icons">event</i>
             </div>
@@ -135,9 +136,6 @@
             </h4>
           </div>
           <div class="mdl-card__actions mdl-card--border">
-            <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
-              Dismiss
-            </a>
             <div class="mdl-layout-spacer"></div>
                 <i class="material-icons">event</i>
             </div>
@@ -145,10 +143,39 @@
       </div>
     </section>
     <section class="mdl-layout__tab-panel" id="fixed-tab-3">
-      <div class="page-content"><!-- Your content goes here --></div>
+      <div class="page-content">
+        <div class="page-content">
+        <table class="mdl-data-table mdl-js-data-table mdl-data-table--selectable mdl-shadow--2dp">
+          <thead>
+            <tr>
+              <th class="mdl-data-table__cell--non-numeric">Name</th>
+              <th>Date</th>
+              <th>Time</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td class="mdl-data-table__cell--non-numeric">Don't forget to pack</td>
+              <td>3/12/17</td>
+              <td>8:00 PM</td>
+            </tr>
+            <tr>
+              <td class="mdl-data-table__cell--non-numeric">Pick up kids at 4</td>
+              <td>3/29/17</td>
+              <td>9:00 PM</td>
+            </tr>
+            <tr>
+              <td class="mdl-data-table__cell--non-numeric">Taxes due</td>
+              <td>3/30/17</td>
+              <td>11:59 PM</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </section>
   </main>
 </div>
 
 </body>
 </html>
+/
