--- a/projects/BigProject/media.html
+++ b/projects/BigProject/media.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!-- center images -->
         <style type="text/css">
             img.center {
                 display: block;
@@ -11,6 +12,7 @@
         </style>
     </head>
 <body>
+    <!-- personal images taken from facebook -->
     <img src="1.jpg" class="center" alt="Smiley face" height="50%" width="50%">
     <img src="2.jpg" class="center" alt="Smiley face" height="50%" width="50%">
     <img src="3.jpg" class="center" alt="Smiley face" height="50%" width="50%">
