--- a/projects/BigProject/db.html
+++ b/projects/BigProject/db.html
@@ -74,6 +74,7 @@
    </head>
    <body>
       <h3>Search for nickname:</h3>
+      <!-- Form to get user input -->
       <form>
         <input type="search" name="nickname" id="nickname" placeholder="Type nickname here"><br><br>
         <button onclick="read()">Search</button>
